improved error output in GraphvizRunner